# api-stub-server/service/FamilyEmailService.js
@@ -31,7 +31,9 @@ exports.family_emailsFamilyEmailIDPUT = function(body,familyEmailID,xUID) {
     examples['application/json'] = {
   "firstName" : "太郎",
   "lastName" : "山田",
+  "phoneNumber" : "090-1234-5678",
   "familyEmailID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+  "iconImage" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE=",
   "email" : "sample@sample.com"
 };
     if (Object.keys(examples).length > 0) {
@@ -57,12 +59,16 @@ exports.family_emailsGET = function(xUID) {
   "data" : [ {
     "firstName" : "太郎",
     "lastName" : "山田",
+    "phoneNumber" : "090-1234-5678",
     "familyEmailID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+    "iconImage" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE=",
     "email" : "sample@sample.com"
   }, {
     "firstName" : "太郎",
     "lastName" : "山田",
+    "phoneNumber" : "090-1234-5678",
     "familyEmailID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+    "iconImage" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE=",
     "email" : "sample@sample.com"
   } ]
 };
@@ -89,7 +95,9 @@ exports.family_emailsPOST = function(body,xUID) {
     examples['application/json'] = {
   "firstName" : "太郎",
   "lastName" : "山田",
+  "phoneNumber" : "090-1234-5678",
   "familyEmailID" : "f47ac10b-58cc-4372-a567-0e02b2c3d479",
+  "iconImage" : "VkJPUncwS0dnb0FBQUFOU1VoRVVnQUFBQmdBQUFBWUNBWUFBQURnZHozNEFBQUJqRWxFUVZSSVMrMlZ2VW9EUVJTR3Y3VlE=",
   "email" : "sample@sample.com"
 };
     if (Object.keys(examples).length > 0) {
